--- a/.reek.yml
+++ b/.reek.yml
@@ -7,3 +7,7 @@ directories:
   test:
     InstanceVariableAssumption:
       enabled: false
+    UncommunicativeMethodName:
+      enabled: false
+    UtilityFunction:
+      enabled: false
