--- a/.reek.yml
+++ b/.reek.yml
@@ -2,12 +2,12 @@
 detectors:
   IrresponsibleModule:
     enabled: false
+  UtilityFunction:
+    public_methods_only: true
 
 directories:
   test:
     InstanceVariableAssumption:
       enabled: false
     UncommunicativeMethodName:
-      enabled: false
-    UtilityFunction:
       enabled: false
